PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
? ? ??? 200?, Version 5.0.0
- Fixed bug #23009 (pg_select with timestamp). (Marcus, Jay)
- Moved extensions to PECL (http://pear.php.net/): (James, Tal)
  . ext/fribidi
- Fixed bug #22386 (Using browscap causes segfault). (Jay)
- Fixed bug #22895 (PHP cli outputs errors in text AND html). (Marcus)
- Fixed bug #22059 (ftp_chdir causes segfault). (Sara)
- Fixed bug #21985 and #22064 (various mb_send_mail() issues). (Moriyoshi)
- Fixed bug #21600 (Assign by reference function call changes variable contents).
  (Zeev)
- Fixed bug #21007 (html_errors off text-only output in phpinfo). (Marcus)
- Fixed bug #20442 (upgraded bundled expat to 1.95.5). (Ilia)
- Fixed bug #20155 (xmlrpc compile problem with ZE2). (Derick, Jan Schneider)
- Changed the length parameter in fgetss() to be optional. (Moriyoshi)
- Changed ini parser to allow for handling of quoted multi-line values. (Ilia)
- Changed get_extension_funcs() to return list of the built-in Zend Engine 
  functions if "zend" is specified as the module name. (Ilia)
- Changed is_executable() to be available also on Windows. (Shane)
- Changed array_search() to accept also objects as a needle. (Moriyoshi)
- Changed ext/mcrypt to require libmcrypt version 2.5.6 or greater. (Derick)
- Changed uniqid() parameters to be optional and allow any prefix length. (Marcus)
- Added domxml_doc_create_document_fragment() and 
  domxml_document_fragment_open_mem() methods. (Christian)
- Added domxml_elem_set_attribute_node() method (bug #17638). (Rob Richards)
- Added optional parameter to get_browser() to make it return an array. (Jay)
- Added optional parameter to openssl_sign() to specify the hashing algorithm.
  (scott@planetscott.ca, Derick)
- Added file_set_contents() function. (Sterling)
- Added "mail_force_extra_paramaters" php.ini option which forces the addition 